added security demo

--- a/initial/pom.xml
+++ b/initial/pom.xml
@@ -36,10 +36,19 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <!-- end::actuator[] -->
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
     </dependencies>
 
     <properties>
-        <start-class>hello.Application</start-class>
+        <start-class>com.main.Application</start-class>
     </properties>
 
     <build>
